Update meta information

--- a/blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla.html
+++ b/blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666152f803478e4487f76a06" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Ilmainen hosting-palvelu Google Firebase CLI:n avulla</title>
-  <meta content="Ilmainen hosting-palvelu Google Firebase CLI:n avulla" property="og:title">
-  <meta content="Ilmainen hosting-palvelu Google Firebase CLI:n avulla" property="twitter:title">
+  <title>Ilmainen hosting-palvelu Google Firebase CLI:n avulla – Nords Oy</title>
+  <meta content="Firebase Hosting tarjoaa nopean ja turvallisen tavan isännöidä staattisia verkkosivustoja ja dynaamisia web-sovelluksia. Lue lisää ilmaisesta web hostingista!" name="description">
+  <meta content="Ilmainen hosting-palvelu Google Firebase CLI:n avulla – Nords Oy" property="og:title">
+  <meta content="Firebase Hosting tarjoaa nopean ja turvallisen tavan isännöidä staattisia verkkosivustoja ja dynaamisia web-sovelluksia. Lue lisää ilmaisesta web hostingista!" property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/66615688a7cc81d396ccdf4e_tumma-tietokone.webp" property="og:image">
+  <meta content="Ilmainen hosting-palvelu Google Firebase CLI:n avulla – Nords Oy" property="twitter:title">
+  <meta content="Firebase Hosting tarjoaa nopean ja turvallisen tavan isännöidä staattisia verkkosivustoja ja dynaamisia web-sovelluksia. Lue lisää ilmaisesta web hostingista!" property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/66615688a7cc81d396ccdf4e_tumma-tietokone.webp" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -212,7 +219,7 @@
         </div>
       </a>
     </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/WhatsApp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
+    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
       <div class="live-icon"></div>
     </div>
   </aside>
