--- a/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
+++ b/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666165c205e7278c111e36fc" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Näin nostat yrityksesi kärkeen Googlen hakutuloksissa</title>
-  <meta content="Näin nostat yrityksesi kärkeen Googlen hakutuloksissa" property="og:title">
-  <meta content="Näin nostat yrityksesi kärkeen Googlen hakutuloksissa" property="twitter:title">
+  <title>Näin nostat yrityksesi kärkeen Googlen hakutuloksissa – Nords Oy</title>
+  <meta content="Menestyminen Googlen hakutuloksissa on lähes jokaisen yrityksen tavoite, sillä hyvä näkyvyys hakukoneissa tuo lisää liikennettä verkkosivustolle." name="description">
+  <meta content="Näin nostat yrityksesi kärkeen Googlen hakutuloksissa – Nords Oy" property="og:title">
+  <meta content="Menestyminen Googlen hakutuloksissa on lähes jokaisen yrityksen tavoite, sillä hyvä näkyvyys hakukoneissa tuo lisää liikennettä verkkosivustolle." property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666164ec610ae775c1cad0ad_puhelin-kahvi.webp" property="og:image">
+  <meta content="Näin nostat yrityksesi kärkeen Googlen hakutuloksissa – Nords Oy" property="twitter:title">
+  <meta content="Menestyminen Googlen hakutuloksissa on lähes jokaisen yrityksen tavoite, sillä hyvä näkyvyys hakukoneissa tuo lisää liikennettä verkkosivustolle." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666164ec610ae775c1cad0ad_puhelin-kahvi.webp" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -229,7 +236,7 @@
         </div>
       </a>
     </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/WhatsApp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
+    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
       <div class="live-icon"></div>
     </div>
   </aside>
