--- a/tietosuojaseloste.html
+++ b/tietosuojaseloste.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66612ac14510075e0dd5cbe4" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -6,8 +6,10 @@
   <meta content="Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." name="description">
   <meta content="Tietosuojaseloste – Nords Oy" property="og:title">
   <meta content="Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="og:image">
   <meta content="Tietosuojaseloste – Nords Oy" property="twitter:title">
   <meta content="Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -177,7 +179,7 @@
         </div>
       </a>
     </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/WhatsApp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
+    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
       <div class="live-icon"></div>
     </div>
   </aside>
