--- a/blogi/mita-ovat-dns-tietueet.html
+++ b/blogi/mita-ovat-dns-tietueet.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66646029df458af1df30843a" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Mitä ovat DNS-tietueet?</title>
-  <meta content="Mitä ovat DNS-tietueet?" property="og:title">
-  <meta content="Mitä ovat DNS-tietueet?" property="twitter:title">
+  <title>Mitä ovat DNS-tietueet? – Nords Oy</title>
+  <meta content="DNS-tietueet ovat tämän järjestelmän perusyksiköitä, jotka määrittävät, miten eri verkkotunnusten ja niiden osien tulee toimia. Lue lisää DNS-tietueista!" name="description">
+  <meta content="Mitä ovat DNS-tietueet? – Nords Oy" property="og:title">
+  <meta content="DNS-tietueet ovat tämän järjestelmän perusyksiköitä, jotka määrittävät, miten eri verkkotunnusten ja niiden osien tulee toimia. Lue lisää DNS-tietueista!" property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666460a50de3867804d46ab1_macbook-finder.webp" property="og:image">
+  <meta content="Mitä ovat DNS-tietueet? – Nords Oy" property="twitter:title">
+  <meta content="DNS-tietueet ovat tämän järjestelmän perusyksiköitä, jotka määrittävät, miten eri verkkotunnusten ja niiden osien tulee toimia. Lue lisää DNS-tietueista!" property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666460a50de3867804d46ab1_macbook-finder.webp" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -217,7 +224,7 @@
         </div>
       </a>
     </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/WhatsApp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
+    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="../images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
       <div class="live-icon"></div>
     </div>
   </aside>
