--- a/detail_post-categories.html
+++ b/detail_post-categories.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="664df11e3916b1a4e878c283" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
+<html data-wf-page="664df11e3916b1a4e878c27e" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Ota yhteyttä – Nords Oy</title>
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" name="description">
-  <meta content="Ota yhteyttä – Nords Oy" property="og:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="og:image">
-  <meta content="Ota yhteyttä – Nords Oy" property="twitter:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title></title>
+  <meta content="" name="description">
+  <meta content="" property="og:description">
+  <meta content="" property="twitter:description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -23,7 +17,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/ota-yhteytta" rel="canonical">
+  <link href="https://www.nords.fi/detail_post-categories" rel="canonical">
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -35,37 +29,41 @@
         <a href="hinnasto" class="nav-link w-nav-link">Hinnasto</a>
         <a href="tyot" class="nav-link w-nav-link">Työt</a>
         <a href="blogi" class="nav-link w-nav-link">Blogi</a>
-        <a href="ota-yhteytta" aria-current="page" class="nav-link last w-nav-link w--current">Ota yhteyttä</a>
+        <a href="ota-yhteytta" class="nav-link last w-nav-link">Ota yhteyttä</a>
       </nav>
       <div class="menu-button w-nav-button"></div>
     </div>
   </div>
-  <div class="section top">
+  <section class="section top">
     <div class="w-layout-blockcontainer container w-container">
-      <div data-w-id="a668f3e9-eca4-3fe4-18ba-0996c8899d2c" style="-webkit-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_80-px-bottom-margin-div">
-        <h1 class="h1 small">Ota yhteyttä</h1>
+      <div data-w-id="8293889a-fe05-368d-b45b-7654675c2138" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="_80-px-bottom-margin-div">
+        <h1 class="h1 w-dyn-bind-empty"></h1>
       </div>
-      <div class="w-layout-grid contact-grid">
-        <div data-w-id="a668f3e9-eca4-3fe4-18ba-0996c8899d3d" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="left-contact-flex">
-          <div class="_20-px-bottom-margin">
-            <div class="_32-px-text">Jätä meille viesti</div>
+      <div class="w-dyn-list">
+        <div data-w-id="54e3e8f1-1e1e-e55d-3f58-e004a5485109" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" role="list" class="blog-grid categorie w-dyn-items">
+          <div role="listitem" class="w-dyn-item">
+            <div id="w-node-_54e3e8f1-1e1e-e55d-3f58-e004a548510b-e878c27e" class="blog-wrapper">
+              <a id="w-node-_54e3e8f1-1e1e-e55d-3f58-e004a548510c-e878c27e" href="#" class="blog-image post-categorie w-inline-block"><img alt="" loading="lazy" src="https://uploads-ssl.webflow.com/65ccd2a7a00452c4a24ab516/65ccdf73474d3839332eb188_653b85506d4397f280420c12_post2.jpg" class="_100-image w-dyn-bind-empty"></a>
+              <div class="blog-card">
+                <div class="flex-blog-div">
+                  <div>
+                    <a href="#" class="category-link"></a>
+                  </div>
+                </div>
+                <a href="#" class="post-blog-title"></a>
+                <div class="_10-px-top-margin-div">
+                  <div class="date w-dyn-bind-empty"></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="_40-px-top-margin-div"><img src="images/6405e89d2779e771f356f4ff_work-1.jpg" loading="lazy" id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d42-e878c283" sizes="(max-width: 479px) 83vw, (max-width: 767px) 333.328125px, (max-width: 991px) 266.6640625px, (max-width: 1439px) 95vw, 1280px" alt="Tabletti" srcset="images/6405e89d2779e771f356f4ff_work-1-p-500.jpg 500w, images/6405e89d2779e771f356f4ff_work-1-p-800.jpg 800w, images/6405e89d2779e771f356f4ff_work-1-p-1080.jpg 1080w, images/6405e89d2779e771f356f4ff_work-1.jpg 1600w" class="contact-image"></div>
         </div>
-        <div class="form-block w-form">
-          <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="a668f3e9-eca4-3fe4-18ba-0996c8899d31" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="contact-form" data-wf-page-id="664df11e3916b1a4e878c283" data-wf-element-id="a668f3e9-eca4-3fe4-18ba-0996c8899d31"><input class="connect-textfield w-input" maxlength="256" name="Nimi" data-name="Nimi" placeholder="Nimi" type="text" id="Nimi" required=""><input class="connect-textfield w-input" maxlength="256" name="Sahkopostiosoite" data-name="Sahkopostiosoite" placeholder="Sähköpostiosoite" type="text" id="Sahkopostiosoite" required=""><textarea id="Viesti" name="Viesti" maxlength="5000" data-name="Viesti" placeholder="Viesti" required="" class="textarea w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d34-e878c283 w-input"></textarea>
-            <div id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d35-e878c283" class="submit-button-div"><input type="submit" data-wait="Odota hetki..." id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d36-e878c283" class="submit-button w-button" value="Lähetä"></div>
-          </form>
-          <div class="success-message-2 w-form-done">
-            <div>Kiitos! Viestisi on lähetetty.</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div>Oho! Jotain meni vikaan viestin lähettämisessä.</div>
-          </div>
+        <div class="w-dyn-empty">
+          <div>No items found.</div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <footer class="footer">
     <div class="w-layout-blockcontainer container w-container">
       <div>
@@ -90,7 +88,7 @@
                   <a href="blogi" class="footer-link">Blogi</a>
                 </li>
                 <li class="footer-link-item">
-                  <a href="ota-yhteytta" aria-current="page" class="footer-link w--current">Ota yhteyttä</a>
+                  <a href="ota-yhteytta" class="footer-link">Ota yhteyttä</a>
                 </li>
                 <li class="footer-link-item">
                   <a href="tietosuojaseloste" class="footer-link">Tietosuojaseloste</a>
@@ -125,7 +123,7 @@
             <div id="w-node-_32916864-5b97-4e76-4e51-035006162243-0616221f" class="newsletter-wrapper">
               <div class="footer-title">Jätä soittopyyntö!</div>
               <div class="w-form">
-                <form id="wf-form-Soittopyynt-lomake" name="wf-form-Soittopyynt-lomake" data-name="Soittopyyntölomake" method="get" class="form" data-wf-page-id="664df11e3916b1a4e878c283" data-wf-element-id="32916864-5b97-4e76-4e51-035006162247">
+                <form id="wf-form-Soittopyynt-lomake" name="wf-form-Soittopyynt-lomake" data-name="Soittopyyntölomake" method="get" class="form" data-wf-page-id="664df11e3916b1a4e878c27e" data-wf-element-id="32916864-5b97-4e76-4e51-035006162247">
                   <div>
                     <div class="w-layout-grid subscribe-grid"><input class="newsletter-text w-node-c7eac8ea-f1ab-9277-034c-2b91ffbbffa4-0616221f w-input" maxlength="256" name="Soittopyynto" data-name="Soittopyynto" placeholder="Puhelinnumero" type="text" id="Soittopyynto" required="">
                       <div id="w-node-_32916864-5b97-4e76-4e51-03500616224b-0616221f" class="flex-button-div"><input type="submit" data-wait="Odota hetki..." class="submit-button w-button" value="Lähetä"></div>
@@ -153,36 +151,6 @@
       </div>
     </div>
   </footer>
-  <aside class="whatsapp-block">
-    <div class="whatsapp-chat">
-      <div class="top-section">
-        <div class="profile-wrapper">
-          <div class="profile-image-wrapper"><img src="images/Eeli.webp" loading="lazy" sizes="(max-width: 1919px) 47px, 100vw" srcset="images/Eeli-p-500.webp 500w, images/Eeli.webp 640w" alt="Eeli Lohi" class="live-icon-chat">
-            <div class="live-icon profile-image"></div>
-          </div>
-          <div class="top-text-container">
-            <div class="live-chat-top-text">Eeli Lohi</div>
-            <div class="live-chat-bottom-text">Nords Oy</div>
-          </div>
-        </div>
-        <div id="close-chat" class="close-live-chat-container"><img src="images/Sulje.svg" loading="lazy" alt="Sulje ikoni" class="close-livechat-icon"></div>
-      </div>
-      <div class="chat-section">
-        <div class="chat-block">
-          <div class="live-chat-top-text block">Eeli Lohi</div>
-          <div class="live-chat-bottom-text block">Hei! 👋 Voinko olla avuksi?</div>
-        </div>
-      </div>
-      <a href="https://wa.me/358449819623" target="_blank" class="live-chat-link w-inline-block">
-        <div class="livechat-button"><img src="images/WhatsApp_Pieni.svg" loading="lazy" alt="Pieni WhatsApp logo" class="small-whatsapp-icon">
-          <div class="live-chat-text">Aloita keskustelu</div>
-        </div>
-      </a>
-    </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
-      <div class="live-icon"></div>
-    </div>
-  </aside>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664df11d3916b1a4e878c205" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nords-k7i7y.js" type="text/javascript"></script>
   <script>
