--- a/detail_product.html
+++ b/detail_product.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="664df11e3916b1a4e878c281" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
+<html data-wf-page="664df11e3916b1a4e878c286" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Blogi – Nords Oy</title>
-  <meta content="Lue ajankohtaisia kirjoituksiamme! Nords Oy – Digitoimisto, joka välittää. Nettisivut yrityksille alkaen 300€ + ALV. Ota yhteyttä ja laitetaan brändisi kuntoon!" name="description">
-  <meta content="Blogi – Nords Oy" property="og:title">
-  <meta content="Lue ajankohtaisia kirjoituksiamme! Nords Oy – Digitoimisto, joka välittää. Nettisivut yrityksille alkaen 300€ + ALV. Ota yhteyttä ja laitetaan brändisi kuntoon!" property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="og:image">
-  <meta content="Blogi – Nords Oy" property="twitter:title">
-  <meta content="Lue ajankohtaisia kirjoituksiamme! Nords Oy – Digitoimisto, joka välittää. Nettisivut yrityksille alkaen 300€ + ALV. Ota yhteyttä ja laitetaan brändisi kuntoon!" property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Nords Oy</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -23,7 +14,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/blogi" rel="canonical">
+  <link href="https://www.nords.fi/detail_product" rel="canonical">
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -34,7 +25,7 @@
         <a href="tiimi" class="nav-link w-nav-link">Tiimi</a>
         <a href="hinnasto" class="nav-link w-nav-link">Hinnasto</a>
         <a href="tyot" class="nav-link w-nav-link">Työt</a>
-        <a href="blogi" aria-current="page" class="nav-link w-nav-link w--current">Blogi</a>
+        <a href="blogi" class="nav-link w-nav-link">Blogi</a>
         <a href="ota-yhteytta" class="nav-link last w-nav-link">Ota yhteyttä</a>
       </nav>
       <div class="menu-button w-nav-button"></div>
@@ -42,58 +33,43 @@
   </div>
   <section class="section top">
     <div class="w-layout-blockcontainer container w-container">
-      <div data-w-id="5f630c41-1d4f-6997-450b-d70c6593ea43" style="-webkit-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 48px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_80-px-bottom-margin-div">
-        <h1 class="h1 small">Blogi</h1>
+      <div data-w-id="40babf7c-2ab2-6310-da04-30e64c26ce22" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="_80-px-bottom-margin-div">
+        <h1 class="h1"></h1>
       </div>
-      <div data-w-id="d1c71093-b408-a13c-ce68-84da322523e1" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="blog-grid">
-        <div id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10048-8ac10048" class="blog-wrapper">
-          <a id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10049-8ac10048" href="blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla" class="blog-image w-inline-block"><img alt="Tumma kannettava tietokone" loading="lazy" src="images/tumma-tietokone.webp" class="_100-image">
-            <div class="wrap-company-icon"><img src="images/Google_Firebase.svg" loading="lazy" alt="Google Firebase ikoni" class="icon-company-logo"></div>
-          </a>
-          <div class="blog-card">
-            <div class="flex-blog-div">
-              <div>
-                <a href="blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla" class="category-link">web hosting</a>
-              </div>
+      <div class="w-layout-grid products-grid">
+        <div id="w-node-f286e528-1803-9ace-4c2e-2a86a8ef680e-e878c286" data-w-id="f286e528-1803-9ace-4c2e-2a86a8ef680e" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="card-container">
+          <div class="product-title"></div>
+          <div class="_32-px-margin-top-and-bottom">
+            <div class="price-text"></div>
+          </div>
+          <div class="featured-grid">
+            <div class="service-text">Service included?</div>
+            <div>
+              <div class="featured-text"></div>
             </div>
-            <a href="blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla" class="post-blog-title">Ilmainen hosting-palvelu Google Firebase CLI:n avulla</a>
-            <div class="_10-px-top-margin-div">
-              <div class="date">24/05/2024</div>
+            <div>
+              <div class="featured-text"></div>
+            </div>
+            <div>
+              <div class="featured-text"></div>
+            </div>
+            <div>
+              <div class="featured-text"></div>
+            </div>
+          </div>
+          <div>
+            <form data-node-type="commerce-add-to-cart-form" class="w-commerce-commerceaddtocartform default-state block"><input type="number" pattern="^[0-9]+$" inputmode="numeric" id="quantity-71a12557ee984ed0634e0a8cd3f49234" name="commerce-add-to-cart-quantity-input" min="1" class="w-commerce-commerceaddtocartquantityinput quantity" value="1"><input type="submit" data-node-type="commerce-add-to-cart-button" data-loading-text="Adding to cart..." aria-busy="false" aria-haspopup="dialog" class="w-commerce-commerceaddtocartbutton button" value="Add to Cart">
+              <a data-node-type="commerce-buy-now-button" data-default-text="Buy Now" data-subscription-text="Subscribe now" aria-busy="false" aria-haspopup="false" class="w-commerce-commercebuynowbutton button" href="checkout">Buy Now</a>
+            </form>
+            <div style="display:none" class="w-commerce-commerceaddtocartoutofstock" tabindex="0">
+              <div>This product is out of stock.</div>
+            </div>
+            <div aria-live="assertive" data-node-type="commerce-add-to-cart-error" style="display:none" class="w-commerce-commerceaddtocarterror">
+              <div data-node-type="commerce-add-to-cart-error" data-w-add-to-cart-quantity-error="Product is not available in this quantity." data-w-add-to-cart-general-error="Something went wrong when adding this item to the cart." data-w-add-to-cart-mixed-cart-error="You can’t purchase another product with a subscription." data-w-add-to-cart-buy-now-error="Something went wrong when trying to purchase this item." data-w-add-to-cart-checkout-disabled-error="Checkout is disabled on this site." data-w-add-to-cart-select-all-options-error="Please select an option in each set.">Product is not available in this quantity.</div>
             </div>
           </div>
         </div>
-        <div id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10048-8ac10048" class="blog-wrapper">
-          <a id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10049-8ac10048" href="blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa" class="blog-image w-inline-block"><img alt="Mies katsoo puhelintaan kahvi toisessa kädessä" loading="lazy" src="images/puhelin-kahvi.webp" class="_100-image">
-            <div class="wrap-company-icon"><img src="images/Google.svg" loading="lazy" alt="Google ikoni" class="icon-company-logo"></div>
-          </a>
-          <div class="blog-card">
-            <div class="flex-blog-div">
-              <div>
-                <a href="blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa" class="category-link">SEO</a>
-              </div>
-            </div>
-            <a href="blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa" class="post-blog-title">Näin nostat yrityksesi kärkeen Googlen hakutuloksissa</a>
-            <div class="_10-px-top-margin-div">
-              <div class="date">06/05/2024</div>
-            </div>
-          </div>
-        </div>
-        <div id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10048-8ac10048" class="blog-wrapper">
-          <a id="w-node-_39d48280-fee1-6d7d-23a0-18458ac10049-8ac10048" href="blogi/mita-ovat-dns-tietueet" class="blog-image w-inline-block"><img alt="Macbook tietokone, jossa on Finder sovellus auki" loading="lazy" src="images/macbook-finder.webp" class="_100-image">
-            <div class="wrap-company-icon"><img src="images/cpanel-logo.png" loading="lazy" alt="cPanel logo" class="icon-company-logo"></div>
-          </a>
-          <div class="blog-card">
-            <div class="flex-blog-div">
-              <div>
-                <a href="blogi/mita-ovat-dns-tietueet" class="category-link">Domain</a>
-              </div>
-            </div>
-            <a href="blogi/mita-ovat-dns-tietueet" class="post-blog-title">Mitä ovat DNS-tietueet?</a>
-            <div class="_10-px-top-margin-div">
-              <div class="date">18/04/2024</div>
-            </div>
-          </div>
-        </div>
+        <div id="w-node-_30ba45eb-a357-66f7-3a03-8da21bd86fc4-e878c286"></div>
       </div>
     </div>
   </section>
@@ -118,7 +94,7 @@
                   <a href="tyot" class="footer-link">Työt</a>
                 </li>
                 <li class="footer-link-item">
-                  <a href="blogi" aria-current="page" class="footer-link w--current">Blogi</a>
+                  <a href="blogi" class="footer-link">Blogi</a>
                 </li>
                 <li class="footer-link-item">
                   <a href="ota-yhteytta" class="footer-link">Ota yhteyttä</a>
@@ -156,7 +132,7 @@
             <div id="w-node-_32916864-5b97-4e76-4e51-035006162243-0616221f" class="newsletter-wrapper">
               <div class="footer-title">Jätä soittopyyntö!</div>
               <div class="w-form">
-                <form id="wf-form-Soittopyynt-lomake" name="wf-form-Soittopyynt-lomake" data-name="Soittopyyntölomake" method="get" class="form" data-wf-page-id="664df11e3916b1a4e878c281" data-wf-element-id="32916864-5b97-4e76-4e51-035006162247">
+                <form id="wf-form-Soittopyynt-lomake" name="wf-form-Soittopyynt-lomake" data-name="Soittopyyntölomake" method="get" class="form" data-wf-page-id="664df11e3916b1a4e878c286" data-wf-element-id="32916864-5b97-4e76-4e51-035006162247">
                   <div>
                     <div class="w-layout-grid subscribe-grid"><input class="newsletter-text w-node-c7eac8ea-f1ab-9277-034c-2b91ffbbffa4-0616221f w-input" maxlength="256" name="Soittopyynto" data-name="Soittopyynto" placeholder="Puhelinnumero" type="text" id="Soittopyynto" required="">
                       <div id="w-node-_32916864-5b97-4e76-4e51-03500616224b-0616221f" class="flex-button-div"><input type="submit" data-wait="Odota hetki..." class="submit-button w-button" value="Lähetä"></div>
@@ -184,36 +160,6 @@
       </div>
     </div>
   </footer>
-  <aside class="whatsapp-block">
-    <div class="whatsapp-chat">
-      <div class="top-section">
-        <div class="profile-wrapper">
-          <div class="profile-image-wrapper"><img src="images/Eeli.webp" loading="lazy" sizes="(max-width: 1919px) 47px, 100vw" srcset="images/Eeli-p-500.webp 500w, images/Eeli.webp 640w" alt="Eeli Lohi" class="live-icon-chat">
-            <div class="live-icon profile-image"></div>
-          </div>
-          <div class="top-text-container">
-            <div class="live-chat-top-text">Eeli Lohi</div>
-            <div class="live-chat-bottom-text">Nords Oy</div>
-          </div>
-        </div>
-        <div id="close-chat" class="close-live-chat-container"><img src="images/Sulje.svg" loading="lazy" alt="Sulje ikoni" class="close-livechat-icon"></div>
-      </div>
-      <div class="chat-section">
-        <div class="chat-block">
-          <div class="live-chat-top-text block">Eeli Lohi</div>
-          <div class="live-chat-bottom-text block">Hei! 👋 Voinko olla avuksi?</div>
-        </div>
-      </div>
-      <a href="https://wa.me/358449819623" target="_blank" class="live-chat-link w-inline-block">
-        <div class="livechat-button"><img src="images/WhatsApp_Pieni.svg" loading="lazy" alt="Pieni WhatsApp logo" class="small-whatsapp-icon">
-          <div class="live-chat-text">Aloita keskustelu</div>
-        </div>
-      </a>
-    </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
-      <div class="live-icon"></div>
-    </div>
-  </aside>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664df11d3916b1a4e878c205" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nords-k7i7y.js" type="text/javascript"></script>
   <script>
