--- a/kysely.html
+++ b/kysely.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="665f36c6248b6a99d5e11e8e" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Kysely</title>
-  <meta content="Kysely" property="og:title">
-  <meta content="Kysely" property="twitter:title">
+  <title>Kysely – Nords Oy</title>
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" name="description">
+  <meta content="Kysely – Nords Oy" property="og:title">
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="og:image">
+  <meta content="Kysely – Nords Oy" property="twitter:title">
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
