--- a/tyot.html
+++ b/tyot.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 14:36:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:00:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Työt – Nords Oy</title>
+  <meta content="Tutustu aikaisempiin projekteihimme, niin saat paremman käsityksen työmme jäljestä. Verkkosivut yrityksille kaikkiin tarpeisiin. Nettisivut alkaen 300€ + alv." name="description">
   <meta content="Työt – Nords Oy" property="og:title">
+  <meta content="Tutustu aikaisempiin projekteihimme, niin saat paremman käsityksen työmme jäljestä. Verkkosivut yrityksille kaikkiin tarpeisiin. Nettisivut alkaen 300€ + alv." property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="og:image">
   <meta content="Työt – Nords Oy" property="twitter:title">
+  <meta content="Tutustu aikaisempiin projekteihimme, niin saat paremman käsityksen työmme jäljestä. Verkkosivut yrityksille kaikkiin tarpeisiin. Nettisivut alkaen 300€ + alv." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/666471ed93cc9601bc7e9238_webimage.webp" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -279,7 +286,7 @@
         </div>
       </a>
     </div>
-    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/WhatsApp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
+    <div id="whatsapp-button" data-w-id="6c2a8bf8-f02f-91d5-90d0-45e31e33e0c2" class="whatsapp-container"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp logo" class="whatsapp-icon">
       <div class="live-icon"></div>
     </div>
   </aside>
