--- a/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
+++ b/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:01:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:05:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666165c205e7278c111e36fc" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -108,8 +108,8 @@
                 <li>Vastaa kaikkiin arvosteluihin, sekä positiivisiin että negatiivisiin, ammattimaisesti ja kohteliaasti.</li>
               </ul>
               <h2>Yhteenveto</h2>
-              <p>Menestyminen Googlen hakutuloksissa vaatii pitkäjänteisyyttä. Ymmärrä kohdeyleisösi, tuota laadukasta sisältöä, huolehdi teknisestä SEO</p>
-              <p>, rakenna vahvoja linkkejä ja luo ammattimainen Google My Business -profiili. Näillä askelilla voit parantaa yrityksesi näkyvyyttä ja sijoitusta Googlen hakutuloksissa, tuoden lisää liikennettä ja potentiaalisia asiakkaita kotisivuillesi.</p>
+              <p>Menestyminen Googlen hakutuloksissa vaatii pitkäjänteisyyttä. Ymmärrä kohdeyleisösi, tuota laadukasta sisältöä, huolehdi teknisestä hakukoneoptimoinnista, rakenna vahvoja linkkejä ja luo ammattimainen Google My Business -profiili.</p>
+              <p>Näillä askelilla voit parantaa yrityksesi näkyvyyttä ja sijoitusta Googlen hakutuloksissa, tuoden lisää liikennettä ja potentiaalisia asiakkaita kotisivuillesi.</p>
             </div>
             <div class="space _42"></div>
             <div class="author-flex"><img src="../images/Eeli_Lohi.jpeg" loading="lazy" alt="Eeli Lohi" sizes="64px" srcset="../images/Eeli_Lohi-p-500.jpg 500w, ../images/Eeli_Lohi-p-800.jpg 800w, ../images/Eeli_Lohi-p-1080.jpg 1080w, ../images/Eeli_Lohi-p-1600.jpg 1600w, ../images/Eeli_Lohi.jpeg 1723w" class="author-image">
