Configure WhatsApp widget

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:05:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:42:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -138,7 +138,7 @@
               <div class="price-text">€ 300.00 <span class="span-font-16px">+ alv. 24%</span><br></div>
             </div>
             <div class="featured-grid">
-              <div class="featured-text">2-4 osiota sisältävä yksinkertainen kotisivu</div>
+              <div class="featured-text">Yksisivuinen kotisivu tarpeidesi mukaan</div>
               <div class="featured-text">Hakukoneoptimointi</div>
               <div class="featured-text">Nopea latausaika</div>
               <div class="featured-text">Ilmainen SSL-sertifikaatti</div>
