--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:47:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:56:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c282" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -60,7 +60,7 @@
               <div class="_16-px-text">Helsinki</div>
               <div class="social-div-team">
                 <a href="https://fi.linkedin.com/in/eeli-lohi-043162298" target="_blank" class="social-link-team w-inline-block"><img src="images/65801fbc336f4eb49c54000d_linkedin_165801fbc336f4eb49c54000d_linkedin.png" loading="lazy" alt="LinkedIn ikoni" class="social-image"></a>
-                <a href="https://wa.me/358449819623" target="_blank" class="social-link-team w-inline-block"><img src="images/WhatsApp_1.svg" loading="lazy" alt="WhatsApp logo" class="social-image"></a>
+                <a href="https://wa.me/358449819623" target="_blank" class="social-link-team w-inline-block"><img src="images/whatsapp-logo.svg" loading="lazy" alt="WhatsApp logo" class="social-image"></a>
               </div>
             </div>
           </div>
@@ -77,7 +77,7 @@
               <div class="_16-px-text">LuK, Tampereen yliopisto</div>
               <div class="social-div-team">
                 <a href="https://www.linkedin.com/in/joose-lohi-576965249/" target="_blank" class="social-link-team w-inline-block"><img src="images/65801fbc336f4eb49c54000d_linkedin_165801fbc336f4eb49c54000d_linkedin.png" loading="lazy" alt="LinkedIn ikoni" class="social-image"></a>
-                <a href="https://wa.me/358449701888" target="_blank" class="social-link-team w-inline-block"><img src="images/WhatsApp_1.svg" loading="lazy" alt="WhatsApp logo" class="social-image"></a>
+                <a href="https://wa.me/358449701888" target="_blank" class="social-link-team w-inline-block"><img src="images/whatsapp-logo.svg" loading="lazy" alt="WhatsApp logo" class="social-image"></a>
                 <a href="https://github.com/jooselohi" target="_blank" class="social-link-team w-inline-block"><img src="images/github.svg" loading="lazy" alt="Github logo" class="social-image"></a>
               </div>
             </div>
