Update LinkedIn link url

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:56:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
   <header>
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="w-layout-blockcontainer nav-container w-container">
-        <a href="https://www.nords.fi" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+        <a href="https://www.nords.fi" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 52vw, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="https://www.nords.fi" aria-current="page" class="nav-link w-nav-link w--current">Koti</a>
           <a href="tiimi" class="nav-link w-nav-link">Tiimi</a>
@@ -278,7 +278,7 @@
             </div>
             <div class="right-arrow left w-slider-arrow-left"><img width="10" loading="lazy" alt="Nuoli oikealle" src="images/arrow_forward_black_24dp.svg" class="down-arrow-2 rotate"></div>
             <div class="right-arrow w-slider-arrow-right"><img width="10" loading="lazy" alt="Nuoli oikealle" src="images/arrow_forward_black_24dp.svg" class="down-arrow-2"></div>
-            <div class="slide-nav-2 w-slider-nav w-round"></div>
+            <div class="slide-nav-2 w-slider-nav w-slider-nav-invert w-round"></div>
           </div>
         </div>
       </div>
