--- a/kysely.html
+++ b/kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:56:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="665f36c6248b6a99d5e11e8e" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@
               <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e2fb-d5e11e8e" class="grid-cell"><label for="y-tunnus" class="paragraph-1 paragraph-gray">Y-tunnus</label><input class="text-field-2 w-input" maxlength="256" name="y-tunnus" data-name="Y Tunnus" placeholder="3325747-8" type="text" id="y-tunnus"></div>
               <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e2ff-d5e11e8e" class="grid-cell"><label for="puhelinnumero" class="paragraph-1 paragraph-gray">Puhelinnumero</label><input class="text-field-2 w-input" maxlength="256" name="puhelinnumero" data-name="Puhelinnumero" placeholder="0449819623" type="tel" id="puhelinnumero"></div>
               <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e303-d5e11e8e" class="grid-cell"><label for="sposti" class="paragraph-1 paragraph-gray">Sähköpostiosoite</label><input class="text-field-2 w-input" maxlength="256" name="sposti" data-name="Sposti" placeholder="eeli@nords.fi" type="email" id="sposti"></div>
-              <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e307-d5e11e8e" class="grid-cell"><label for="osoite" class="paragraph-1 paragraph-gray">Osoite</label><input class="text-field-2 w-input" maxlength="256" name="osoite" data-name="Osoite" placeholder="Albert Edelfeltin rantatie 17A, 06400 Porvoo" type="text" id="osoite"></div>
+              <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e307-d5e11e8e" class="grid-cell"><label for="osoite" class="paragraph-1 paragraph-gray">Osoite</label><input class="text-field-2 w-input" maxlength="256" name="osoite" data-name="Osoite" placeholder="" type="text" id="osoite"></div>
             </div>
             <div class="personal-details">
               <div id="w-node-cd852f48-aef9-4646-4429-f4851cc4e30c-d5e11e8e" class="form-heading">Toiminta</div>
