--- a/blogi/mita-ovat-dns-tietueet.html
+++ b/blogi/mita-ovat-dns-tietueet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 15:56:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66646029df458af1df30843a" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
   <header>
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="w-layout-blockcontainer nav-container w-container">
-        <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="../images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="../images/Nords-p-500.png 500w, ../images/Nords-p-800.png 800w, ../images/Nords-p-1080.png 1080w, ../images/Nords-p-1600.png 1600w, ../images/Nords-p-2000.png 2000w, ../images/Nords-p-2600.png 2600w, ../images/Nords-p-3200.png 3200w, ../images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+        <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="../images/Nords.png" loading="lazy" sizes="(max-width: 479px) 52vw, 135px" srcset="../images/Nords-p-500.png 500w, ../images/Nords-p-800.png 800w, ../images/Nords-p-1080.png 1080w, ../images/Nords-p-1600.png 1600w, ../images/Nords-p-2000.png 2000w, ../images/Nords-p-2600.png 2600w, ../images/Nords-p-3200.png 3200w, ../images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="https://www.nords.fi" class="nav-link w-nav-link">Koti</a>
           <a href="../tiimi" class="nav-link w-nav-link">Tiimi</a>
@@ -77,7 +77,7 @@
               <p>Tässä tietueessa <code>example.com</code> yhdistetään IP-osoitteeseen <code>192.0.2.1</code> ja tietueen TTL on 3600 sekuntia.</p>
               <h3>2. AAAA-tietue (IPv6 Address Record)</h3>
               <p>AAAA-tietue on vastaava kuin A-tietue, mutta se yhdistää verkkotunnuksen IPv6-osoitteeseen. Esimerkiksi:</p>
-              <p><code>example.com.  3600  IN  AAAA  2001:0db8:85a3:0000:0000:8a2e:0370:7334<br></code></p>
+              <p><code>example.com.  3600  IN  AAAA 2001:0db8:85a3:0000:0000:8a2e:0370:7334<br></code></p>
               <p>Tässä tietueessa <code>example.com</code> yhdistetään IPv6-osoitteeseen <code>2001:0db8:85a3:0000:0000:8a2e:0370:7334</code>.</p>
               <h3>3. CNAME-tietue (Canonical Name Record)</h3>
               <p>CNAME-tietue yhdistää yhden verkkotunnuksen toiseen verkkotunnukseen. Tämä on hyödyllistä, kun halutaan ohjata useita aliverkkotunnuksia samaan IP-osoitteeseen. Esimerkiksi:</p>
