Update WhatsApp contact configuration

--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 17 2024 11:20:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c282" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -26,11 +26,17 @@
   <link href="https://www.nords.fi/tiimi" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
+  <style>
+  body {
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+	}
+</style>
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="w-layout-blockcontainer nav-container w-container">
-      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 52vw, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="https://www.nords.fi" class="nav-link w-nav-link">Koti</a>
         <a href="tiimi" aria-current="page" class="nav-link w-nav-link w--current">Tiimi</a>
@@ -93,7 +99,7 @@
         <div class="subtitle-div">
           <p class="paragraph">Olemme valmiina hommiin! Aloitetaan projekti tai käydään yksityiskohdat tarkemmin läpi yhdessä. Joka tapauksessa, pistä meille viestiä!<br></p>
         </div>
-        <a href="https://wa.me/358449819623" target="_blank" class="whatsapp-button w-inline-block">
+        <a href="https://wa.me/358449757778" target="_blank" class="whatsapp-button w-inline-block">
           <div class="whatsapp-code-embed w-embed"><svg viewbox="0 0 56.693 56.693" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 56.693 56.693">
               <path d="M46.38 10.714C41.73 6.057 35.544 3.492 28.954 3.489c-13.579 0-24.63 11.05-24.636 24.633a24.589 24.589 0 0 0 3.289 12.316L4.112 53.204l13.06-3.426a24.614 24.614 0 0 0 11.772 2.999h.01c13.577 0 24.63-11.052 24.635-24.635.002-6.582-2.558-12.772-7.209-17.428zM28.954 48.616h-.009a20.445 20.445 0 0 1-10.421-2.854l-.748-.444-7.75 2.033 2.07-7.555-.488-.775a20.427 20.427 0 0 1-3.13-10.897c.004-11.29 9.19-20.474 20.484-20.474a20.336 20.336 0 0 1 14.476 6.005 20.352 20.352 0 0 1 5.991 14.485c-.004 11.29-9.19 20.476-20.475 20.476z" fill-rule="evenodd" clip-rule="evenodd" fill="currentColor" class="fill-000000"></path>
               <path d="M40.185 33.281c-.615-.308-3.642-1.797-4.206-2.003-.564-.205-.975-.308-1.385.308-.41.617-1.59 2.003-1.949 2.414-.359.41-.718.462-1.334.154-.615-.308-2.599-.958-4.95-3.055-1.83-1.632-3.065-3.648-3.424-4.264-.36-.617-.038-.95.27-1.257.277-.276.615-.719.923-1.078.308-.36.41-.616.616-1.027.205-.41.102-.77-.052-1.078-.153-.308-1.384-3.338-1.897-4.57-.5-1.2-1.008-1.038-1.385-1.057-.359-.018-.77-.022-1.18-.022s-1.077.154-1.642.77c-.564.616-2.154 2.106-2.154 5.135 0 3.03 2.206 5.957 2.513 6.368.308.41 4.341 6.628 10.516 9.294a35.341 35.341 0 0 0 3.509 1.297c1.474.469 2.816.402 3.877.244 1.183-.177 3.642-1.49 4.155-2.927.513-1.438.513-2.67.359-2.927-.154-.257-.564-.41-1.18-.719z" fill-rule="evenodd" clip-rule="evenodd" fill="currentColor" class="fill-000000"></path>
@@ -141,7 +147,7 @@
               <div class="footer-title">Nords Oy</div>
               <ul role="list" class="footer-links-wrapper w-list-unstyled">
                 <li class="footer-link-item">
-                  <a href="tel:+358449819623" class="footer-link">044 981 9623</a>
+                  <a href="tel:+358449757778" class="footer-link">044 975 7778</a>
                 </li>
                 <li class="footer-link-item">
                   <a href="mailto:eeli@nords.fi" class="footer-link">eeli@nords.fi</a>
@@ -153,7 +159,7 @@
                   <a href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="footer-link">LinkedIn</a>
                 </li>
                 <li class="footer-link-item">
-                  <a href="https://wa.me/358449819623" target="_blank" class="footer-link">WhatsApp</a>
+                  <a href="https://wa.me/358449757778" target="_blank" class="footer-link">WhatsApp</a>
                 </li>
               </ul>
             </div>
@@ -210,7 +216,7 @@
           <div class="live-chat-bottom-text block">Hei! 👋 Voinko olla avuksi?</div>
         </div>
       </div>
-      <a href="https://wa.me/358449819623" target="_blank" class="live-chat-link w-inline-block">
+      <a href="https://wa.me/358449757778" target="_blank" class="live-chat-link w-inline-block">
         <div class="livechat-button"><img src="images/WhatsApp_Pieni.svg" loading="lazy" alt="Pieni WhatsApp logo" class="small-whatsapp-icon">
           <div class="live-chat-text">Aloita keskustelu</div>
         </div>
