--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 17 2024 11:20:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -26,11 +26,17 @@
   <link href="https://www.nords.fi/tyot" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
+  <style>
+  body {
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+	}
+</style>
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="w-layout-blockcontainer nav-container w-container">
-      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 52vw, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="https://www.nords.fi" class="nav-link w-nav-link">Koti</a>
         <a href="tiimi" class="nav-link w-nav-link">Tiimi</a>
@@ -213,7 +219,7 @@
               <div class="footer-title">Nords Oy</div>
               <ul role="list" class="footer-links-wrapper w-list-unstyled">
                 <li class="footer-link-item">
-                  <a href="tel:+358449819623" class="footer-link">044 981 9623</a>
+                  <a href="tel:+358449757778" class="footer-link">044 975 7778</a>
                 </li>
                 <li class="footer-link-item">
                   <a href="mailto:eeli@nords.fi" class="footer-link">eeli@nords.fi</a>
@@ -225,7 +231,7 @@
                   <a href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="footer-link">LinkedIn</a>
                 </li>
                 <li class="footer-link-item">
-                  <a href="https://wa.me/358449819623" target="_blank" class="footer-link">WhatsApp</a>
+                  <a href="https://wa.me/358449757778" target="_blank" class="footer-link">WhatsApp</a>
                 </li>
               </ul>
             </div>
@@ -282,7 +288,7 @@
           <div class="live-chat-bottom-text block">Hei! 👋 Voinko olla avuksi?</div>
         </div>
       </div>
-      <a href="https://wa.me/358449819623" target="_blank" class="live-chat-link w-inline-block">
+      <a href="https://wa.me/358449757778" target="_blank" class="live-chat-link w-inline-block">
         <div class="livechat-button"><img src="images/WhatsApp_Pieni.svg" loading="lazy" alt="Pieni WhatsApp logo" class="small-whatsapp-icon">
           <div class="live-chat-text">Aloita keskustelu</div>
         </div>
