--- a/kysely.html
+++ b/kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jun 08 2024 17:10:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 17 2024 11:20:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="665f36c6248b6a99d5e11e8e" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -26,6 +26,12 @@
   <link href="https://www.nords.fi/kysely" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
+  <style>
+  body {
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+	}
+</style>
 </head>
 <body>
   <div class="navigation-wrapper feedback">
@@ -124,7 +130,7 @@
               <div class="footer-title">Nords Oy</div>
               <ul role="list" class="footer-links-wrapper w-list-unstyled">
                 <li class="footer-link-item">
-                  <a href="tel:+358449819623" class="footer-link">044 981 9623</a>
+                  <a href="tel:+358449757778" class="footer-link">044 975 7778</a>
                 </li>
                 <li class="footer-link-item">
                   <a href="mailto:eeli@nords.fi" class="footer-link">eeli@nords.fi</a>
@@ -136,7 +142,7 @@
                   <a href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="footer-link">LinkedIn</a>
                 </li>
                 <li class="footer-link-item">
-                  <a href="https://wa.me/358449819623" target="_blank" class="footer-link">WhatsApp</a>
+                  <a href="https://wa.me/358449757778" target="_blank" class="footer-link">WhatsApp</a>
                 </li>
               </ul>
             </div>
