Configure Google Reviews widget

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jul 17 2024 11:20:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jul 23 2024 14:03:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -56,7 +56,15 @@
           <div class="subtitle-div">
             <p class="paragraph">Nords Oy on digitoimisto, joka yhdistää luovuuden ja teknologian tuottaakseen vaikuttavia kotisivuja ja yritysilmeitä. Oletko valmis viemään brändisi uudelle tasolle?<br></p>
           </div>
-          <a href="#Scroll" class="button _66 w-button">Lue lisää</a>
+          <div class="hero-button-flex">
+            <a href="#Scroll" class="button _66 w-button">Lue lisää</a>
+            <div id="w-node-c83f9163-5a7a-2a78-5df8-148a89b002e3-e878c27c">
+              <div class="w-embed w-script">
+                <div class="review-widget_net" data-uuid="9c977206-4cb8-4fd5-93e1-34127c2fe47b" data-template="2" data-lang="en" data-theme="light"></div>
+                <script src="https://grwapi.net/widget.min.js"></script>
+              </div>
+            </div>
+          </div>
           <div class="btn-bg c-18"></div>
           <div class="btn-bg c-18"></div>
         </div>
