--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Sep 01 2024 13:33:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Sep 16 2024 15:50:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -117,16 +117,16 @@
           </div>
         </div>
         <div class="top-project-grid">
-          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="Mikura Sushi verkkosivut" src="images/Mikurasushi_Mockup.webp" class="work-image">
-            <a href="https://mikurasushi.fi/" target="_blank" class="view-circle-link w-inline-block">
+          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="Laki VSC verkkosivut" src="images/Laki_VSC_Mockup.webp" class="work-image">
+            <a href="https://laki-vsc.fi/" target="_blank" class="view-circle-link w-inline-block">
               <div class="view-text">Tutustu</div>
             </a>
           </div>
           <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d893-c469d88d" class="center-flex-div">
             <div>
-              <a href="https://mikurasushi.fi/" target="_blank" class="_48-px-post-title">Mikura Sushi Oy</a>
+              <a href="https://laki-vsc.fi/" target="_blank" class="_48-px-post-title">Laki VSC</a>
               <div class="_10-px-top-margin-div">
-                <div class="category-project">2024</div>
+                <div class="category-project">2023</div>
               </div>
             </div>
           </div>
@@ -148,14 +148,14 @@
           </div>
         </div>
         <div class="top-project-grid">
-          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="Laki VSC verkkosivut" src="images/Laki_VSC_Mockup.webp" class="work-image">
-            <a href="https://laki-vsc.fi/" target="_blank" class="view-circle-link w-inline-block">
+          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="MR Car Detailing verkkosivut" src="images/MR_Cardetailing_Mockup.webp" class="work-image">
+            <a href="https://www.mrcardetailing.fi/" target="_blank" class="view-circle-link w-inline-block">
               <div class="view-text">Tutustu</div>
             </a>
           </div>
           <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d893-c469d88d" class="center-flex-div">
             <div>
-              <a href="https://laki-vsc.fi/" target="_blank" class="_48-px-post-title">Laki VSC</a>
+              <a href="https://www.mrcardetailing.fi/" target="_blank" class="_48-px-post-title">MR Car Detailing Oy</a>
               <div class="_10-px-top-margin-div">
                 <div class="category-project">2023</div>
               </div>
