--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Sep 16 2024 15:50:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Oct 24 2024 10:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -73,14 +73,14 @@
           <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d7-149a76d6" class="hide-on-mobile-div"></div>
           <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d8-149a76d6" class="center-flex-div">
             <div>
-              <a href="https://www.helsinginkulta.fi/" target="_blank" class="_48-px-post-title">Helsingin Kulta</a>
+              <a href="https://vrum.fi/" target="_blank" class="_48-px-post-title">Vrum Vrum Oy</a>
               <div class="_10-px-top-margin-div">
                 <div class="category-project">2024</div>
               </div>
             </div>
           </div>
-          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="Helsingin Kulta verkkosivut" src="images/Helsingin_Kulta_Mockup.webp" class="work-image">
-            <a href="https://www.helsinginkulta.fi/" target="_blank" class="view-circle-link w-inline-block">
+          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="Vrum Vrum Oy verkkosivut" src="images/Vrum_Mockup.webp" class="work-image">
+            <a href="https://vrum.fi/" target="_blank" class="view-circle-link w-inline-block">
               <div class="view-text">Tutustu</div>
             </a>
           </div>
